# Rasterization

./: .gitignore
src/: 2DVector.cpp  2DVector.h  3DVector.cpp  3DVector.h  CMakeLists.txt  Color.h  HelloWorld  Main.cpp  ProjectionMath  ProjectionMath.cpp  ProjectionMath.h  Triangle  Triangle.cpp  Triangle.h  Window  Window.cpp  Window.h  main  makefile
test/: CMakeLists.txt  Window  Window.cpp
